tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20030109_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20030109-1.c" (c, x86_64-unknown-linux-gnu)
global x : rec_X = {0, 40, zero} [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %4 = get_global @x : rec_X*
        %5 = get_member %4[1] "b" : s32i*
        %6 = load %5 : s32i, align 4
        %7 = const 40 : s32i
        %8 = cmp ne %6, %7 : bool
        if %8 {
            %9 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
