tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20030117_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20030117-1.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg3: s32i, %arg4: s32i, %arg5: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s32i, %arg4: s32i, %arg5: s32i):
        %34 = alloca s32i, "x", align 4
        %35 = alloca s32i, "y", align 4
        %36 = alloca s32i, "z", align 4
        %37 = alloca s32i, "__retval", align 4
        store %arg3, %34
        store %arg4, %35
        store %arg5, %36
        %38 = load %34 : s32i, align 4
        %39 = load %35 : s32i, align 4
        %40 = add %38, %39 : s32i [nsw]
        %41 = load %36 : s32i, align 4
        %42 = add %40, %41 : s32i [nsw]
        %43 = const 3 : s32i
        %44 = div %42, %43 : s32i
        store %44, %37
        %45 = load %37 : s32i
        return %45
}
fn abort() -> void [external, c, nothrow];
fn bar(%arg0: s32i, %arg1: s32i, %arg2: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i):
        %19 = alloca s32i, "x", align 4
        %20 = alloca s32i, "y", align 4
        %21 = alloca s32i, "z", align 4
        %22 = alloca s32i, "__retval", align 4
        store %arg0, %19
        store %arg1, %20
        store %arg2, %21
        %23 = load %19 : s32i, align 4
        %24 = load %19 : s32i, align 4
        %25 = mul %23, %24 : s32i [nsw]
        %26 = load %20 : s32i, align 4
        %27 = load %20 : s32i, align 4
        %28 = mul %26, %27 : s32i [nsw]
        %29 = load %21 : s32i, align 4
        %30 = load %21 : s32i, align 4
        %31 = mul %29, %30 : s32i [nsw]
        %32 = call @foo(%25, %28, %31) : s32i [all]
        store %32, %22
        %33 = load %22 : s32i
        return %33
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %12 = const 5 : s32i
        %13 = const 10 : s32i
        %14 = const 21 : s32i
        %15 = call @foo(%12, %13, %14) : s32i [all]
        %16 = const 12 : s32i
        %17 = cmp ne %15, %16 : bool
        if %17 {
            %18 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %5 = const 9 : s32i
        %6 = const 12 : s32i
        %7 = const 15 : s32i
        %8 = call @bar(%5, %6, %7) : s32i [all]
        %9 = const 150 : s32i
        %10 = cmp ne %8, %9 : bool
        if %10 {
            %11 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
